# robometric-frame

./: .gitattributes  .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/commands/: release-frame.md
.github/workflows/: ci.yml  docs.yml  pages-build-check.yml
docs/: Makefile  SETUP_HOOKS.md  metrics.md
docs/source/: conf.py  index.rst
examples/: README.md  action_accuracy.py  basic_success_rate.py  distributed_training.py  dtw_example.py  path_length.py  task_completion_rate.py
scripts/: setup_dev.sh
src/robometric_frame/: __init__.py
src/robometric_frame/efficiency/: __init__.py  base.py  inference_latency.py  memory_usage.py
src/robometric_frame/safety/: __init__.py  base.py  collision_rate.py  obstacle_proximity.py  risk_factor.py
src/robometric_frame/task_performance/: __init__.py  action_accuracy.py  success_rate.py  task_completion_rate.py
src/robometric_frame/trajectory_quality/: __init__.py  absolute_trajectory_error.py  curvature_change.py  dtw.py  path_length.py  path_smoothness.py  relative_trajectory_error.py
src/vla_metrics/: __init__.py
src/vla_metrics/efficiency/: __init__.py  inference_latency.py  memory_usage.py
src/vla_metrics/safety/: __init__.py  base.py  collision_rate.py  obstacle_proximity.py  risk_factor.py
src/vla_metrics/task_performance/: __init__.py  action_accuracy.py  success_rate.py  task_completion_rate.py
src/vla_metrics/trajectory_quality/: __init__.py  absolute_trajectory_error.py  curvature_change.py  path_length.py  path_smoothness.py  relative_trajectory_error.py
tests/: __init__.py  test_absolute_trajectory_error.py  test_action_accuracy.py  test_collision_rate.py  test_curvature_change.py  test_dtw.py  test_inference_latency.py  test_memory_usage.py  test_obstacle_proximity.py  test_path_length.py  test_path_smoothness.py  test_relative_trajectory_error.py  test_risk_factor.py  test_success_rate.py  test_task_completion_rate.py
