[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robometric-frame"
version = "0.2.0"
description = "FRAME: Framework for Robotic Action and Motion Evaluation - TorchMetrics-based evaluation metrics for robotics policies and robot learning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ameya Wagh", email = "ameyawagh@ieee.org" }]
keywords = [
    "robotics",
    "robot-learning",
    "metrics",
    "evaluation",
    "imitation-learning",
    "reinforcement-learning",
    "torchmetrics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["torch>=1.10.0", "torchmetrics>=0.11.0", "numpy>=1.20.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "interrogate>=1.5.0",
    "types-psutil>=7.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=1.0.0",
    "sphinx-autobuild>=2021.3.14",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=1.0.0",
    "sphinx-autobuild>=2021.3.14",
]

[project.urls]
Homepage = "https://github.com/ameyawagh/robometric-frame"
Documentation = "https://github.com/ameyawagh/robometric-frame"
Repository = "https://github.com/ameyawagh/robometric-frame"
Issues = "https://github.com/ameyawagh/robometric-frame/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robometric_frame = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=robometric_frame --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".venv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "dist",
    "htmlcov",
    "docs/build",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["robometric_frame"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["^.venv/", "^dist/", "^docs/build/"]

[[tool.mypy.overrides]]
module = ["torch.*", "torchmetrics.*"]
follow_imports = "skip"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 80
verbose = 1
exclude = ["tests", "examples", "docs"]
